# vectorize

./: Cargo.toml  README.md  minilm-l6-v2_config.json
scripts/: verify.py
src/: lib.rs  main.rs
src/models/: bert.rs  components.rs  mod.rs
src/tensor/: mod.rs
src/wasm/: mod.rs
src/weights/: mod.rs
