[package]
name = "vectorize-rs"
version = "0.1.0"
edition = "2024"
authors = ["Ólafur Aron Jóhannsson <olafurjohannss@gmail.com>"]
description = "Simple, fast local text embeddings for Rust"
license = "Apache-2.0"
repository = "https://github.com/olafurjohannss/vectorize-rs"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
ort = "2.0.0-rc.10"
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
futures = "0.3.31"
tokenizers = "0.21.4"
wasm-bindgen = { version = "0.2.100", optional = true }
js-sys = { version = "0.3.77", optional = true }
web-sys = { version = "0.3.77", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["wasm-bindgen", "js-sys", "web-sys"]