[package]
name = "vectorize-rs"
version = "0.1.0"
edition = "2024"
authors = ["Ólafur Aron Jóhannsson"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokenizers = { version = "0.15", default-features = false, features = ["onig"] }
tokio = { version = "1.47.1" , features = ["full"] }

# Tensor storage
safetensors = "0.4"
ndarray = "0.15"

# WASM support
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]